--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </header>
     <main>
       <!--Main section-->
-      <section class="main">
+      <section class="main overlay">
         <div class="container">
           <h1 class="main-title">
             Эффективные решения <br />
@@ -52,7 +52,7 @@
         <div class="container">
           <h2 class="section-title-tasks">Задачи организации</h2>
           <ul class="tasks list">
-            <li class="item">
+            <li class="item icon-antenna">
               <h3 class="title">Внимание к деталям</h3>
               <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
             </li>
