--- a/index.html
+++ b/index.html
@@ -52,7 +52,12 @@
         <div class="container">
           <h2 class="section-title-tasks">Задачи организации</h2>
           <ul class="tasks list">
-            <li class="item icon-antenna">
+            <li class="item">
+              <div>
+                <svg>
+                  <use></use>
+                </svg>
+              </div>
               <h3 class="title">Внимание к деталям</h3>
               <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
             </li>
