--- a/index.html
+++ b/index.html
@@ -29,8 +29,22 @@
         </nav>
 
         <ul class="auth-nav list">
-          <li class="item"><a href="" class="link">info@devstudio.com</a></li>
-          <li class="item"><a href="" class="link">+38 096 111 11 11</a></li>
+          <li class="item">
+            <a href="" class="link">
+              <svg width="16" height="12">
+                <use href="./images/sprite.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com
+            </a>
+          </li>
+          <li class="item">
+            <a href="" class="link">
+              <svg width="10" height="16">
+                <use href="./images/sprite.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11
+            </a>
+          </li>
         </ul>
       </div>
     </header>
@@ -53,23 +67,38 @@
           <h2 class="section-title-tasks">Задачи организации</h2>
           <ul class="tasks list">
             <li class="item">
-              <div>
-                <svg>
-                  <use></use>
+              <div class="icon-tasks">
+                <svg class="icon-antenna" width="70" height="70">
+                  <use href="./images/sprite.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="title">Внимание к деталям</h3>
               <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
             </li>
             <li class="item">
+              <div class="icon-tasks">
+                <svg class="icon-antenna" width="70" height="70">
+                  <use href="./images/sprite.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="title">Пунктуальность</h3>
               <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
             </li>
             <li class="item">
+              <div class="icon-tasks">
+                <svg class="icon-antenna" width="70" height="70">
+                  <use href="./images/sprite.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="title">Планирование</h3>
               <p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
             </li>
             <li class="item">
+              <div class="icon-tasks">
+                <svg class="icon-antenna" width="70" height="70">
+                  <use href="./images/sprite.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="title">Современные технологии</h3>
               <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
