--- a/index.html
+++ b/index.html
@@ -29,14 +29,16 @@
         </nav>
 
         <ul class="auth-nav list">
-          <li class="item">
-            <a href="" class="link">
-              <svg width="16" height="12">
-                <use href="./images/sprite.svg#icon-envelope"></use>
-              </svg>
-              info@devstudio.com
-            </a>
-          </li>
+          <div class="icon-envelope">
+            <li class="item">
+              <a href="" class="link">
+                <svg width="16" height="12">
+                  <use href="./images/sprite.svg#icon-envelope"></use>
+                </svg>
+                info@devstudio.com
+              </a>
+            </li>
+          </div>
           <li class="item">
             <a href="" class="link">
               <svg width="10" height="16">
@@ -125,25 +127,123 @@
           <h2 class="section-title team">Наша команда</h2>
 
           <ul class="team list">
-            <li class="item">
+            <li class="item card">
               <img src="images/Демьяненко.jpg" alt="man" width="270" />
               <h3 class="title">Игорь Демьяненко</h3>
               <p class="text">Product Designer</p>
+              <div class="icon-item">
+                <svg class="icon-team" width="20" height="20">
+                  <use href="./images/sprite.svg#icon-instagram"></use>
+                </svg>
+                <svg class="icon-team" width="20" height="20">
+                  <use href="./images/sprite.svg#icon-twitter"></use>
+                </svg>
+                <svg class="icon-team" width="20" height="20">
+                  <use href="./images/sprite.svg#icon-facebook"></use>
+                </svg>
+                <svg class="icon-team" width="20" height="20">
+                  <use href="./images/sprite.svg#icon-linkedin"></use>
+                </svg>
+              </div>
             </li>
-            <li class="item">
+            <li class="item card">
               <img src="images/Репина.jpg" alt="woman" width="270" />
               <h3 class="title">Ольга Репина</h3>
               <p class="text">Frontend Developer</p>
+              <div class="icon-item">
+                <svg class="icon-team" width="20" height="20">
+                  <use href="./images/sprite.svg#icon-instagram"></use>
+                </svg>
+                <svg class="icon-team" width="20" height="20">
+                  <use href="./images/sprite.svg#icon-twitter"></use>
+                </svg>
+                <svg class="icon-team" width="20" height="20">
+                  <use href="./images/sprite.svg#icon-facebook"></use>
+                </svg>
+                <svg class="icon-team" width="20" height="20">
+                  <use href="./images/sprite.svg#icon-linkedin"></use>
+                </svg>
+              </div>
             </li>
-            <li class="item">
+            <li class="item card">
               <img src="images/Тарасов.jpg" alt="man" width="270" />
               <h3 class="title">Николай Тарасов</h3>
               <p class="text">Marketing</p>
+              <div class="icon-item">
+                <svg class="icon-team instagram" width="20" height="20">
+                  <use href="./images/sprite.svg#icon-instagram"></use>
+                </svg>
+                <svg class="icon-team" width="20" height="20">
+                  <use href="./images/sprite.svg#icon-twitter"></use>
+                </svg>
+                <svg class="icon-team" width="20" height="20">
+                  <use href="./images/sprite.svg#icon-facebook"></use>
+                </svg>
+                <svg class="icon-team" width="20" height="20">
+                  <use href="./images/sprite.svg#icon-linkedin"></use>
+                </svg>
+              </div>
             </li>
-            <li class="item">
+            <li class="item card">
               <img src="images/Ермаков.jpg" alt="man" width="270" />
               <h3 class="title">Михаил Ермаков</h3>
               <p class="text">UI Designer</p>
+              <div class="icon-item">
+                <svg class="icon-team" width="20" height="20">
+                  <use href="./images/sprite.svg#icon-instagram"></use>
+                </svg>
+                <svg class="icon-team" width="20" height="20">
+                  <use href="./images/sprite.svg#icon-twitter"></use>
+                </svg>
+                <svg class="icon-team" width="20" height="20">
+                  <use href="./images/sprite.svg#icon-facebook"></use>
+                </svg>
+                <svg class="icon-team" width="20" height="20">
+                  <use href="./images/sprite.svg#icon-linkedin"></use>
+                </svg>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!--Client section-->
+
+      <section class="section">
+        <div class="container">
+          <h2 class="section-title">Постоянные клиенты</h2>
+          <ul class="client list">
+            <li class="item-client">
+              <div class="icon-client">
+                <svg class="group-one" width="41" height="46.7">
+                  <use href="./images/sprite.svg#icon-group"></use>
+                </svg>
+              </div>
+              <div class="icon-client">
+                <svg class="group-two" width="40" height="52">
+                  <use href="./images/sprite.svg#icon-group-1"></use>
+                </svg>
+              </div>
+              <div class="icon-client">
+                <svg class="group-three" width="43.46" height="41.18">
+                  <use href="./images/sprite.svg#icon-group-2"></use>
+                </svg>
+              </div>
+              <div class="icon-client">
+                <svg class="group-four" width="84.44" height="40.62">
+                  <use href="./images/sprite.svg#icon-group-3"></use>
+                </svg>
+              </div>
+              <div class="icon-client">
+                <svg class="group-five" width="62.54" height="45.43">
+                  <use href="./images/sprite.svg#icon-group-4"></use>
+                </svg>
+              </div>
+              <div class="icon-client">
+                <svg class="group-six" width="93.79" height="43.93">
+                  <use href="./images/sprite.svg#icon-group-5"></use>
+                </svg>
+              </div>
             </li>
           </ul>
         </div>
@@ -152,10 +252,33 @@
 
     <footer class="footer">
       <div class="container">
-        <a href="index.html" class="logo">Web<span class="logo-footer">Studio</span></a>
-        <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
-        <a href="mailto:info@example.com" class="footer-link">info@example.com</a><br />
-        <a href="tel:+380991111111" class="footer-link">+38 099 111 11 11</a>
+        <div class="footer-container">
+          <div>
+            <a href="index.html" class="logo">Web<span class="logo-footer">Studio</span></a>
+            <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
+            <a href="mailto:info@example.com" class="footer-link">info@example.com</a><br />
+            <a href="tel:+380991111111" class="footer-link">+38 099 111 11 11</a>
+          </div>
+          <div class="social-links">
+            <h2 class="title-footer">присоединяйтесь</h2>
+            <ul class="list">
+              <li class="item">
+                <svg class="icon-team" width="20" height="20">
+                  <use href="./images/sprite.svg#icon-instagram"></use>
+                </svg>
+                <svg class="icon-team" width="20" height="20">
+                  <use href="./images/sprite.svg#icon-twitter"></use>
+                </svg>
+                <svg class="icon-team" width="20" height="20">
+                  <use href="./images/sprite.svg#icon-facebook"></use>
+                </svg>
+                <svg class="icon-team" width="20" height="20">
+                  <use href="./images/sprite.svg#icon-linkedin"></use>
+                </svg>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
