добавляет классы и стилизирует svg

--- a/index.html
+++ b/index.html
@@ -27,26 +27,27 @@
             <li class="item"><a href="" class="link">Контакты</a></li>
           </ul>
         </nav>
-
         <ul class="auth-nav list">
           <div class="icon-envelope">
             <li class="item">
               <a href="" class="link">
-                <svg width="16" height="12">
+                <svg class="envelope" width="16" height="12">
                   <use href="./images/sprite.svg#icon-envelope"></use>
                 </svg>
                 info@devstudio.com
               </a>
             </li>
           </div>
-          <li class="item">
-            <a href="" class="link">
-              <svg width="10" height="16">
-                <use href="./images/sprite.svg#icon-smartphone"></use>
-              </svg>
-              +38 096 111 11 11
-            </a>
-          </li>
+          <div class="icon-smartphone">
+            <li class="item">
+              <a href="" class="link">
+                <svg class="smartphone" width="10" height="16">
+                  <use href="./images/sprite.svg#icon-smartphone"></use>
+                </svg>
+                +38 096 111 11 11
+              </a>
+            </li>
+          </div>
         </ul>
       </div>
     </header>
@@ -132,18 +133,20 @@
               <h3 class="title">Игорь Демьяненко</h3>
               <p class="text">Product Designer</p>
               <div class="icon-item">
-                <svg class="icon-team" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-instagram"></use>
-                </svg>
-                <svg class="icon-team" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-twitter"></use>
-                </svg>
-                <svg class="icon-team" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-facebook"></use>
-                </svg>
-                <svg class="icon-team" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-linkedin"></use>
-                </svg>
+                <a href="" class="team-link">
+                  <svg class="icon-team instagram" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-instagram"></use>
+                  </svg>
+                  <svg class="icon-team twitter" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-twitter"></use>
+                  </svg>
+                  <svg class="icon-team facebook" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-facebook"></use>
+                  </svg>
+                  <svg class="icon-team linkedin" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
               </div>
             </li>
             <li class="item card">
@@ -151,18 +154,20 @@
               <h3 class="title">Ольга Репина</h3>
               <p class="text">Frontend Developer</p>
               <div class="icon-item">
-                <svg class="icon-team" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-instagram"></use>
-                </svg>
-                <svg class="icon-team" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-twitter"></use>
-                </svg>
-                <svg class="icon-team" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-facebook"></use>
-                </svg>
-                <svg class="icon-team" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-linkedin"></use>
-                </svg>
+                <a href="" class="team-link">
+                  <svg class="icon-team instagram" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-instagram"></use>
+                  </svg>
+                  <svg class="icon-team twitter" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-twitter"></use>
+                  </svg>
+                  <svg class="icon-team facebook" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-facebook"></use>
+                  </svg>
+                  <svg class="icon-team linkedin" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
               </div>
             </li>
             <li class="item card">
@@ -170,18 +175,20 @@
               <h3 class="title">Николай Тарасов</h3>
               <p class="text">Marketing</p>
               <div class="icon-item">
-                <svg class="icon-team instagram" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-instagram"></use>
-                </svg>
-                <svg class="icon-team" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-twitter"></use>
-                </svg>
-                <svg class="icon-team" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-facebook"></use>
-                </svg>
-                <svg class="icon-team" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-linkedin"></use>
-                </svg>
+                <a href="" class="team-link">
+                  <svg class="icon-team instagram" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-instagram"></use>
+                  </svg>
+                  <svg class="icon-team twitter" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-twitter"></use>
+                  </svg>
+                  <svg class="icon-team facebook" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-facebook"></use>
+                  </svg>
+                  <svg class="icon-team linkedin" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
               </div>
             </li>
             <li class="item card">
@@ -189,18 +196,20 @@
               <h3 class="title">Михаил Ермаков</h3>
               <p class="text">UI Designer</p>
               <div class="icon-item">
-                <svg class="icon-team" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-instagram"></use>
-                </svg>
-                <svg class="icon-team" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-twitter"></use>
-                </svg>
-                <svg class="icon-team" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-facebook"></use>
-                </svg>
-                <svg class="icon-team" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-linkedin"></use>
-                </svg>
+                <a href="" class="team-link">
+                  <svg class="icon-team instagram" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-instagram"></use>
+                  </svg>
+                  <svg class="icon-team twitter" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-twitter"></use>
+                  </svg>
+                  <svg class="icon-team facebook" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-facebook"></use>
+                  </svg>
+                  <svg class="icon-team linkedin" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
               </div>
             </li>
           </ul>
@@ -208,42 +217,43 @@
       </section>
 
       <!--Client section-->
-
       <section class="section">
         <div class="container">
           <h2 class="section-title">Постоянные клиенты</h2>
           <ul class="client list">
             <li class="item-client">
-              <div class="icon-client">
-                <svg class="group-one" width="41" height="46.7">
-                  <use href="./images/sprite.svg#icon-group"></use>
-                </svg>
-              </div>
-              <div class="icon-client">
-                <svg class="group-two" width="40" height="52">
-                  <use href="./images/sprite.svg#icon-group-1"></use>
-                </svg>
-              </div>
-              <div class="icon-client">
-                <svg class="group-three" width="43.46" height="41.18">
-                  <use href="./images/sprite.svg#icon-group-2"></use>
-                </svg>
-              </div>
-              <div class="icon-client">
-                <svg class="group-four" width="84.44" height="40.62">
-                  <use href="./images/sprite.svg#icon-group-3"></use>
-                </svg>
-              </div>
-              <div class="icon-client">
-                <svg class="group-five" width="62.54" height="45.43">
-                  <use href="./images/sprite.svg#icon-group-4"></use>
-                </svg>
-              </div>
-              <div class="icon-client">
-                <svg class="group-six" width="93.79" height="43.93">
-                  <use href="./images/sprite.svg#icon-group-5"></use>
-                </svg>
-              </div>
+              <a href="" class="client-link">
+                <div class="icon-client">
+                  <svg class="group-one" width="41" height="46.7">
+                    <use href="./images/sprite.svg#icon-group"></use>
+                  </svg>
+                </div>
+                <div class="icon-client">
+                  <svg class="group-two" width="40" height="52">
+                    <use href="./images/sprite.svg#icon-group-1"></use>
+                  </svg>
+                </div>
+                <div class="icon-client">
+                  <svg class="group-three" width="43.46" height="41.18">
+                    <use href="./images/sprite.svg#icon-group-2"></use>
+                  </svg>
+                </div>
+                <div class="icon-client">
+                  <svg class="group-four" width="84.44" height="40.62">
+                    <use href="./images/sprite.svg#icon-group-3"></use>
+                  </svg>
+                </div>
+                <div class="icon-client">
+                  <svg class="group-five" width="62.54" height="45.43">
+                    <use href="./images/sprite.svg#icon-group-4"></use>
+                  </svg>
+                </div>
+                <div class="icon-client">
+                  <svg class="group-six" width="93.79" height="43.93">
+                    <use href="./images/sprite.svg#icon-group-5"></use>
+                  </svg>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
@@ -263,18 +273,20 @@
             <h2 class="title-footer">присоединяйтесь</h2>
             <ul class="list">
               <li class="item">
-                <svg class="icon-team" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-instagram"></use>
-                </svg>
-                <svg class="icon-team" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-twitter"></use>
-                </svg>
-                <svg class="icon-team" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-facebook"></use>
-                </svg>
-                <svg class="icon-team" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-linkedin"></use>
-                </svg>
+                <a href="" class="client-link">
+                  <svg class="icon-team instagram" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-instagram"></use>
+                  </svg>
+                  <svg class="icon-team twitter" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-twitter"></use>
+                  </svg>
+                  <svg class="icon-team facebook" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-facebook"></use>
+                  </svg>
+                  <svg class="icon-team linkedin" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
           </div>
