--- a/portfolio.html
+++ b/portfolio.html
@@ -28,10 +28,27 @@
             <li class="item"><a href="" class="link">Контакты</a></li>
           </ul>
         </nav>
-
         <ul class="auth-nav list">
-          <li class="item"><a href="" class="link">info@devstudio.com</a></li>
-          <li class="item"><a href="" class="link">+38 096 111 11 11</a></li>
+          <div class="icon-envelope">
+            <li class="item">
+              <a href="" class="link">
+                <svg class="envelope" width="16" height="12">
+                  <use href="./images/sprite.svg#icon-envelope"></use>
+                </svg>
+                info@devstudio.com
+              </a>
+            </li>
+          </div>
+          <div class="icon-smartphone">
+            <li class="item">
+              <a href="" class="link">
+                <svg class="smartphone" width="10" height="16">
+                  <use href="./images/sprite.svg#icon-smartphone"></use>
+                </svg>
+                +38 096 111 11 11
+              </a>
+            </li>
+          </div>
         </ul>
       </div>
     </header>
@@ -60,66 +77,102 @@
 
           <ul class="progects list">
             <li class="item">
-              <img src="images/Технокряк.jpg" alt="Веб-сайт" width="370" />
-              <div class="names">
-                <h3 class="title">Технокряк</h3>
-                <p class="text">Веб-сайт</p>
+              <div class="progects-card">
+                <a href="" class="progects-link">
+                  <img src="images/Технокряк.jpg" alt="Веб-сайт" width="370" />
+                  <div class="names">
+                    <h3 class="title">Технокряк</h3>
+                    <p class="text">Веб-сайт</p>
+                  </div>
+                </a>
               </div>
             </li>
             <li class="item">
-              <img src="images/NewOrlean.jpg" alt="Постер" width="370" />
-              <div class="names">
-                <h3 class="title">Постер New Orlean vs Golden Star</h3>
-                <p class="text">Дизайн</p>
+              <div class="progects-card">
+                <a href="" class="progects-link">
+                  <img src="images/NewOrlean.jpg" alt="Постер" width="370" />
+                  <div class="names">
+                    <h3 class="title">Постер New Orlean vs Golden Star</h3>
+                    <p class="text">Дизайн</p>
+                  </div>
+                </a>
               </div>
             </li>
             <li class="item">
-              <img src="images/Seafood.jpg" alt="Приложение" width="370" />
-              <div class="names">
-                <h3 class="title">Ресторан Seafood</h3>
-                <p class="text">Приложение</p>
+              <div class="progects-card">
+                <a href="" class="progects-link">
+                  <img src="images/Seafood.jpg" alt="Приложение" width="370" />
+                  <div class="names">
+                    <h3 class="title">Ресторан Seafood</h3>
+                    <p class="text">Приложение</p>
+                  </div>
+                </a>
               </div>
             </li>
             <li class="item">
-              <img src="images/Prime.jpg" alt="Маркетинг" width="370" />
-              <div class="names">
-                <h3 class="title">Проект Prime</h3>
-                <p class="text">Маркетинг</p>
+              <div class="progects-card">
+                <a href="" class="progects-link">
+                  <img src="images/Prime.jpg" alt="Маркетинг" width="370" />
+                  <div class="names">
+                    <h3 class="title">Проект Prime</h3>
+                    <p class="text">Маркетинг</p>
+                  </div>
+                </a>
               </div>
             </li>
             <li class="item">
-              <img src="images/Boxes.jpg" alt="Приложение" width="370" />
-              <div class="names">
-                <h3 class="title">Проект Boxes</h3>
-                <p class="text">Приложение</p>
+              <div class="progects-card">
+                <a href="" class="progects-link">
+                  <img src="images/Boxes.jpg" alt="Приложение" width="370" />
+                  <div class="names">
+                    <h3 class="title">Проект Boxes</h3>
+                    <p class="text">Приложение</p>
+                  </div>
+                </a>
               </div>
             </li>
             <li class="item">
-              <img src="images/InspirationBorders.jpg" alt="Веб-сайт" width="370" />
-              <div class="names">
-                <h3 class="title">Inspiration has no Borders</h3>
-                <p class="text">Веб-сайт</p>
+              <div class="progects-card">
+                <a href="" class="progects-link">
+                  <img src="images/InspirationBorders.jpg" alt="Веб-сайт" width="370" />
+                  <div class="names">
+                    <h3 class="title">Inspiration has no Borders</h3>
+                    <p class="text">Веб-сайт</p>
+                  </div>
+                </a>
               </div>
             </li>
             <li class="item">
-              <img src="images/LimitedEdition.jpg" alt="Дизайн" width="370" />
-              <div class="names">
-                <h3 class="title">Издание Limited Edition</h3>
-                <p class="text">Дизайн</p>
+              <div class="progects-card">
+                <a href="" class="progects-link">
+                  <img src="images/LimitedEdition.jpg" alt="Дизайн" width="370" />
+                  <div class="names">
+                    <h3 class="title">Издание Limited Edition</h3>
+                    <p class="text">Дизайн</p>
+                  </div>
+                </a>
               </div>
             </li>
             <li class="item">
-              <img src="images/LAB.jpg" alt="Маркетинг" width="370" />
-              <div class="names">
-                <h3 class="title">Проект LAB</h3>
-                <p class="text">Маркетинг</p>
+              <div class="progects-card">
+                <a href="" class="progects-link">
+                  <img src="images/LAB.jpg" alt="Маркетинг" width="370" />
+                  <div class="names">
+                    <h3 class="title">Проект LAB</h3>
+                    <p class="text">Маркетинг</p>
+                  </div>
+                </a>
               </div>
             </li>
             <li class="item">
-              <img src="images/GrowingBusiness.jpg" alt="Приложение" width="370" />
-              <div class="names">
-                <h3 class="title">Growing Business</h3>
-                <p class="text">Приложение</p>
+              <div class="progects-card">
+                <a href="" class="progects-link">
+                  <img src="images/GrowingBusiness.jpg" alt="Приложение" width="370" />
+                  <div class="names">
+                    <h3 class="title">Growing Business</h3>
+                    <p class="text">Приложение</p>
+                  </div>
+                </a>
               </div>
             </li>
           </ul>
@@ -129,10 +182,35 @@
 
     <footer class="footer">
       <div class="container">
-        <a href="index.html" class="logo">Web<span class="logo-footer">Studio</span></a>
-        <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
-        <a href="mailto:info@example.com" class="footer-link">info@example.com</a><br />
-        <a href="tel:+380991111111" class="footer-link">+38 099 111 11 11</a>
+        <div class="footer-container">
+          <div>
+            <a href="index.html" class="logo">Web<span class="logo-footer">Studio</span></a>
+            <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
+            <a href="mailto:info@example.com" class="footer-link">info@example.com</a><br />
+            <a href="tel:+380991111111" class="footer-link">+38 099 111 11 11</a>
+          </div>
+          <div class="social-links">
+            <h2 class="title-footer">присоединяйтесь</h2>
+            <ul class="list">
+              <li class="item">
+                <a href="" class="client-link">
+                  <svg class="icon-team instagram" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-instagram"></use>
+                  </svg>
+                  <svg class="icon-team twitter" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-twitter"></use>
+                  </svg>
+                  <svg class="icon-team facebook" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-facebook"></use>
+                  </svg>
+                  <svg class="icon-team linkedin" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
