--- a/portfolio.html
+++ b/portfolio.html
@@ -28,27 +28,24 @@
             <li class="item"><a href="" class="link">Контакты</a></li>
           </ul>
         </nav>
-        <ul class="auth-nav list">
-          <div class="icon-envelope">
-            <li class="item">
-              <a href="" class="link">
-                <svg class="envelope" width="16" height="12">
-                  <use href="./images/sprite.svg#icon-envelope"></use>
-                </svg>
-                info@devstudio.com
-              </a>
-            </li>
-          </div>
-          <div class="icon-smartphone">
-            <li class="item">
-              <a href="" class="link">
-                <svg class="smartphone" width="10" height="16">
-                  <use href="./images/sprite.svg#icon-smartphone"></use>
-                </svg>
-                +38 096 111 11 11
-              </a>
-            </li>
-          </div>
+        <ul class="auth-nav list icons-list">
+          <li class="item icons-header">
+            <a href="" class="link icons-header-link">
+              <svg class="icons-svg" width="16" height="12">
+                <use href="./images/sprite.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com
+            </a>
+          </li>
+
+          <li class="item icons-header">
+            <a href="" class="link icons-header-link">
+              <svg class="icons-svg" width="10" height="16">
+                <use href="./images/sprite.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11
+            </a>
+          </li>
         </ul>
       </div>
     </header>
